--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 click==6.6
+coverage==4.1
+gitdb==0.6.4
+GitPython==2.0.7
 mock==2.0.0
 nose==1.3.7
 pbr==1.10.0
 PyGithub==1.26.0
 six==1.10.0
+smmap==0.9.0
