--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,3 @@
-click==6.6
-coverage==4.1
-gitdb==0.6.4
-GitPython==2.0.7
-mock==2.0.0
-nose==1.3.7
-pbr==1.10.0
-PyGithub==1.26.0
-six==1.10.0
-smmap==0.9.0
-github_token==0.1.0
-pytest==3.0.5
+PyGithub==1.35
+PyYAML==3.12
+pygit2==0.26.1
