--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,11 @@ sudo: false
 python:
       - "3.6"
 install:
-    - "sudo apt-get install libgit2-dev"
     - "pip install -r dev-requirements.txt"
     - "pip install coveralls pytest-cov"
 script:
     - "python -m pytest tests --cov=gitorg"
+    - "python setup.py install"
+    - "bash tests/end_to_end.sh"
 after_success:
     - coveralls
